# XENOMAI

./: 0001-XENOMAI-ipipe-core-for-rpi2-kernel-4.9.80.patch  0001-ipipe-core-for-rpi2-kernel-4.9.80.patch  0002-rpi2-xenomai-commit-595606457ff7e77133946cea165288f3.patch  README.md  bcm_rpi3b_xenomai_arm32_defconfig  build_commands.txt  rpi-commands.txt
OSS-JAPAN-2019/xenomai-3-robotics/demo/alchemy/simple-task/: Makefile  Makefile.am  simple_xeno_task  simple_xeno_task.c  simple_xeno_task.out
OSS-JAPAN-2019/xenomai-3-robotics/demo/alchemy/simple-task/.deps/: simple_xeno_task-simple_xeno_task.Po
OSS-JAPAN-2019/xenomai-3-robotics/demo/alchemy/simple-task/.libs/: lt-simple_xeno_task  simple_xeno_task
OSS-JAPAN-2019/xenomai-3-robotics/demo/posix/my-robot/: Makefile  Makefile.am  my_robot_server  output.txt  xenomai_hackbench_latency_output.txt
OSS-JAPAN-2019/xenomai-3-robotics/demo/posix/my-robot/.libs/: lt-my_robot_server  my_robot_server
OSS-JAPAN-2019/xenomai-3-robotics/demo/posix/my-robot/src/: bt-robot-server.c  bt_serial.c  bt_serial.h  gpioutils.c  gpioutils.h  ldr_control.c  ldr_control.h  led_control.c  led_control.h  motor_control.c  motor_control.h  normal-robot  proxi_sensor.c  proxi_sensor.h  switch_control.c  switch_control.h  ultrasonic_sensor.c  ultrasonic_sensor.h
OSS-JAPAN-2019/xenomai-3-robotics/demo/posix/my-robot/src/.deps/: bt-robot-server.Po  bt_serial.Po  gpioutils.Po  ldr_control.Po  led_control.Po  motor_control.Po  proxi_sensor.Po  switch_control.Po  ultrasonic_sensor.Po
led-switch-user/: compile.txt  gpioutils.c  gpioutils.h  led_control.c  led_control.h  ledswitch.out  mainapp.c  switch_control.c  switch_control.h
(+478 files in other folders)
